# twider-ml

./: README.md  main.py  pyproject.toml  search.py
app/: api.py  client.py  config.py  init.py  searcher.py
events/: __init__.py  consumer.py
processing/: post.py
qdrant/: client.py  init.py  searcher.py
scripts/: init_qdrant_collection.py  search.py
utils/: pydantic_generators.py
